--- a/PWA/public/index.html
+++ b/PWA/public/index.html
@@ -35,6 +35,9 @@
   <script src="/src/js/fetch.js"></script>
   <script src="/src/js/app.js"></script>
   <script src="/src/js/feed.js"></script>
+  <script>
+    navigator.serviceWorker.register("sw.js");
+  </script>
 </body>
 
 </html>
