--- a/PWA/public/index.html
+++ b/PWA/public/index.html
@@ -7,7 +7,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PWAGram</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/PWA/public/manifest.json" />
 </head>
 
 <body>
