Add simple PWA1

--- a/simple/index.html
+++ b/simple/index.html
@@ -12,6 +12,7 @@
 <body>
   <h1>GitHub page as PWA template</h1>
   <h1>hello there</h1>
+  <h2>check check</h2>
   …
   <script>
     if (navigator.serviceWorker) {
