--- a/simple/index.html
+++ b/simple/index.html
@@ -13,6 +13,7 @@
   <h1>GitHub page as PWA template</h1>
   <h1>hello there</h1>
   <h2>check check</h2>
+  <h3>Haha </h3>
   …
   <script>
     if (navigator.serviceWorker) {
