--- a/simple/index.html
+++ b/simple/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub page as PWA template</title>
   <link rel="canonical" href="https://jackson-cmd.github.io/simple/" />
-  <link rel="manifest" href="https://app.starbucks.com/manifest.json">
+  <link rel="manifest" href="/simple/manifest.json">
 </head>
 
 <body>
