--- a/simple/index.html
+++ b/simple/index.html
@@ -32,7 +32,7 @@
 
     function getLocalStream() {
       navigator.mediaDevices
-        .getUserMedia({ video: false, audio: true })
+        .getUserMedia({ video: true, audio: true })
         .then((stream) => {
           window.localStream = stream;
           window.localAudio.srcObject = stream;
