--- a/simple/index.html
+++ b/simple/index.html
@@ -14,6 +14,8 @@
   <p id="status"></p>
   <a id="map-link" target="_blank"></a>
 
+  <br>
+  <button id="showNotificationBtn">Show Notification</button>
   …
   <p><button id="btnStart">START RECORDING</button><br />
     <button id="btnStop">STOP RECORDING</button>
@@ -28,6 +30,36 @@
         '/simple/sw.js',
         { scope: '/simple/' }
       )
+    }
+    // Check if the browser supports the Notification API
+    if ("Notification" in window) {
+      // Check if notifications are allowed
+      if (Notification.permission === "granted") {
+        // If permission is already granted, you can show a notification
+        showNotification();
+      } else if (Notification.permission !== "denied") {
+        // If permission is not denied, request permission
+        document.getElementById("showNotificationBtn").addEventListener("click", function () {
+          Notification.requestPermission().then(function (permission) {
+            if (permission === "granted") {
+              showNotification();
+            }
+          });
+        });
+      }
+    }
+
+    function showNotification() {
+      // Create and display a notification
+      const notification = new Notification("Hello, World!", {
+        body: "This is a notification example.",
+        icon: "https://via.placeholder.com/48", // Replace with your own icon URL
+      });
+
+      // Handle click on the notification
+      notification.addEventListener("click", function () {
+        alert("Notification clicked!");
+      });
     }
     /* global Peer */
 
