--- a/simple/index.html
+++ b/simple/index.html
@@ -10,16 +10,15 @@
 </head>
 
 <body>
+  <h1> Geolocation Permission</h1>
   <button id="find-me">Show my location</button><br />
   <p id="status"></p>
   <a id="map-link" target="_blank"></a>
 
+  <h1> Notifications Permission</h1>
   <br>
   <button id="showNotificationBtn">Show Notification</button>
-  …
-  <p><button id="btnStart">START RECORDING</button><br />
-    <button id="btnStop">STOP RECORDING</button>
-  </p>
+
   <h1>Microphone and Camera Permissions</h1>
 
   <button id="requestMicrophoneBtn">Request Microphone Permission</button>
