--- a/simple/index.html
+++ b/simple/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  haha
   <h1> Geolocation Permission</h1>
   <button id="find-me">Show my location</button><br />
   <p id="status"></p>
