--- a/simple/index.html
+++ b/simple/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub page as PWA template</title>
+  <title>Starbucks</title>
   <link rel="canonical" href="https://jackson-cmd.github.io/simple/" />
   <link rel="manifest" href="/simple/manifest.json">
 </head>
 
 <body>
-  aaa
   <h1> Geolocation Permission</h1>
   <button id="find-me">Show my location</button><br />
   <p id="status"></p>
