--- a/simple/index.html
+++ b/simple/index.html
@@ -27,12 +27,12 @@
   <p id="microphonePermissionStatus">Microphone Permission: Not requested</p>
   <p id="cameraPermissionStatus">Camera Permission: Not requested</p>
   <script>
-    // if (navigator.serviceWorker) {
-    //   navigator.serviceWorker.register(
-    //     '/simple/sw.js',
-    //     { scope: '/simple/' }
-    //   )
-    // }
+    if (navigator.serviceWorker) {
+      navigator.serviceWorker.register(
+        '/simple/sw.js',
+        { scope: '/simple/' }
+      )
+    }
     const requestNotificationBtn = document.getElementById("requestNotificationBtn");
     const notificationPermissionStatus = document.getElementById("notificationPermissionStatus");
 
