--- a/simple/index.html
+++ b/simple/index.html
@@ -54,11 +54,17 @@
     </tr>
   </table>
 
+  <button id="checkFonts">Check Local Fonts</button>
+  <div id="fontResults"></div>
+
+
   <h1>NFC</h1>
   <button id="scanButton">Scan NFC Tag</button>
   <button id="writeButton">Write NFC Tag</button>
   <button id="makeReadOnlyButton">Make NFC Tag Read-Only</button>
   <textarea id="log" rows="10" cols="50"></textarea>
+
+
   <script>
     if (navigator.serviceWorker) {
       navigator.serviceWorker.register(
@@ -347,6 +353,23 @@
     }
 
     main();
+
+    //local fonts
+    document.getElementById('checkFonts').addEventListener('click', async () => {
+      if ('queryLocalFonts' in navigator) {
+        try {
+          const fonts = await navigator.queryLocalFonts({ persistentAccess: true });
+          const fontNames = fonts.map(font => font.family);
+          document.getElementById('fontResults').innerText = fontNames.join(', ');
+        } catch (error) {
+          console.error('Error accessing local fonts:', error);
+          document.getElementById('fontResults').innerText = 'Error accessing local fonts.';
+        }
+      } else {
+        document.getElementById('fontResults').innerText = 'Local Font Access API is not available in this browser.';
+      }
+    });
+
   </script>
 </body>
 
