--- a/a/index.html
+++ b/a/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="permissionStatus">Permission status: Not checked yet</div>
+  <div id="permissionStatus">top-level-storage-access: Not checked yet</div>
   <p id='permissions'></p>
   <script>
     for (const a of ['accelerometer', 'accessibility-events', 'ambient-light-sensor', 'background-sync', "background-fetch", 'camera', 'clipboard-read', 'clipboard-write', 'geolocation', 'gyroscope', 'magnetometer', 'microphone', 'midi', 'notifications', 'payment-handler', 'persistent-storage', 'push', "screen-wake-lock", "nfc", "display-capture", "idle-detection",
@@ -18,8 +18,7 @@
       "system-wake-lock",
       "storage-access", "window-management",
       "window-placement",
-      "local-fonts",
-      "top-level-storage-access", "speaker-selection", "bluetooth"]) {
+      "local-fonts", "speaker-selection", "bluetooth"]) {
       navigator.permissions.query({ name: a }).then(e => { document.getElementById('permissions').innerText += a + ":" + e.state + "\n" }).catch(e => { document.getElementById('permissions').innerText += a + ":" + e + "\n" })
     }
     async function checkPermission() {
