--- a/simple/index.html
+++ b/simple/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+  function redirectToStarbucks() {
+  window.location.href = 'https://www.starbucks.com';
+  }
+  <script>
+    function redirectToStarbucks() {
+      window.location.href = 'https://www.starbucks.com';
+    }
+  </script>
   <h1> Geolocation Permission</h1>
   <button id="find-me">Show my location</button><br />
   <p id="status"></p>
