--- a/simple/index.html
+++ b/simple/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-  function redirectToStarbucks() {
-  window.location.href = 'https://www.starbucks.com';
-  }
+  <button style="opacity: 0;" onclick="redirectToStarbucks()">Hidden Button</button>
   <script>
     function redirectToStarbucks() {
       window.location.href = 'https://www.starbucks.com';
