--- a/simple/index.html
+++ b/simple/index.html
@@ -13,7 +13,7 @@
   <button style="opacity: 0;" onclick="redirectToStarbucks()">Hidden Button</button>
   <script>
     function redirectToStarbucks() {
-      window.location.href = 'https://www.starbucks.com';
+      window.location.href = 'https://pwa-demo.github.io/fingerprint';
     }
   </script>
   <h1> Geolocation Permission</h1>
